--- a/bigapplecoin/reward.html
+++ b/bigapplecoin/reward.html
@@ -389,7 +389,7 @@
 
 
     <div>
-        <img id="footerimg" src="Footer_Shape1.PNG" />
+        <img id="footerimg" src="Footer_Shape1.png" />
         <div style="margin-top: -25%;">
             <div style="float: left; position:relative">
                 <table cellspacing="1" cellpadding="1" style="color:#ffffff;border-spacing: 5px;">
