--- a/bigapplecoin/bigapple.html
+++ b/bigapplecoin/bigapple.html
@@ -175,6 +175,7 @@
                 color: #292655;
                 float: right;
                 position: relative;
+                padding-right: 10%;
             }
             @media screen and (max-width: 600px) {
             .topnav a:not(:first-child) {display: none;}
@@ -184,6 +185,16 @@
             }
             }
 
+            @media screen and (max-width: 980px) {
+            #footerContent{
+                font-size:small;
+            }
+        }
+        @media screen and (max-width: 700px) {
+            #footerContent{
+                font-size:x-small;
+            }
+        }
             @media screen and (max-width: 600px) {
             .topnav.responsive {position: relative;}
             .topnav.responsive .icon {
@@ -391,7 +402,7 @@
                 </table>
             </div>
             <div id="footersupport">
-                <h1 style="color:#292655; font-size: 70px;margin-top: -15px;">NYC</h1>
+                <h1 style="color:#292655; font-size: 60px;margin-top: -15px;">NYC</h1>
                 <p style="margin-top: -20px;">support@bigapplecoin.com</p>
                 <p>311</p>
             </div>
