--- a/bigapplecoin/vendor-reg.html
+++ b/bigapplecoin/vendor-reg.html
@@ -498,7 +498,7 @@
         <img id="footerimg" src="Footer_Shape1.png" />
         <div style="margin-top: -25%;">
             <div style="float: left; position:relative">
-                <table cellspacing="1" cellpadding="1" style="color:#ffffff;border-spacing: 5px;">
+                <table id="footerContent" cellspacing="1" cellpadding="1" style="color:#ffffff;border-spacing: 5px;">
                     <th style="padding-right: 80px;">
                         <h3>Help &amp; Support</h3>
                     </th>
