--- a/bigapplecoin/transaction.html
+++ b/bigapplecoin/transaction.html
@@ -87,6 +87,7 @@
         body {
             margin: 0;
             font-family: 'Raleway', sans-serif;
+            min-width: 980px;
         }
 
         tr {
