--- a/bigapplecoin/reward.html
+++ b/bigapplecoin/reward.html
@@ -13,6 +13,7 @@
         body {
             margin: 0;
             font-family: 'Raleway', sans-serif;
+            min-width: 980px;
         }
         .topnav a:hover {
             background-color: #ddd;
