--- a/bigapplecoin/profile-setting.html
+++ b/bigapplecoin/profile-setting.html
@@ -18,6 +18,7 @@
         body {
             margin: 0;
             font-family: 'Raleway', sans-serif;
+            min-width: 980px;
         }
         .topnav a:hover {
             background-color: #ddd;
