--- a/bigapplecoin/vendor-reg.html
+++ b/bigapplecoin/vendor-reg.html
@@ -493,11 +493,11 @@
         <img id="footerimg" src="Footer_Shape1.png" />
         <div style="margin-top: -25%;">
             <div style="float: left; position:relative">
-                <table id="footerContent" cellspacing="1" cellpadding="1" style="color:#ffffff;border-spacing: 5px;">
-                    <th style="padding-right: 80px;">
+                <table id="footerContent" cellspacing="1" cellpadding="1" style="color:#ffffff;border-spacing: 5px;margin-left: 30px;">
+                    <th style="padding-right: 40px;">
                         <h3>Help &amp; Support</h3>
                     </th>
-                    <th style="padding-right: 80px;">
+                    <th style="padding-right: 40px;">
                         <h3>BigAppleCoin</h3>
                     </th>
                     <th>
