--- a/bigapplecoin/vendor-reg.html
+++ b/bigapplecoin/vendor-reg.html
@@ -417,13 +417,13 @@
         <div id='citizenDiv' style="display:none;float:right; position:relative;margin-top: 2%;text-align: center;border-left-color:#292655;border-left-style: solid;border-width: 2px;padding-left: 50px;margin-right: 35px;">
             <h1 style="color:#292655;">Citizen Registration</h1>
             <h2 style="color:#292655;    margin-top: -10px;font-weight: unset;">Sign Up</h2>
-            <div>
+            <div style="padding-left:154px;">
                 <table>
                     <th style="color: #292655;">
                         <h2>Full Name:</h2><input style="margin-right:120px;" class="inputbtn" type="text" placeholder="Lorem ipsum" />
                     </th>
                     <th style="color: #292655;">
-                        <h2>E Mail:</h2><input style="margin-right: 232px;" class="inputbtn" type="email" placeholder="Lorem ipsum" />
+                        <h2>E Mail:</h2><input style="margin-right: 167px;" class="inputbtn" type="email" placeholder="Lorem ipsum" />
                     </th>
 
                     <tr style="color: #292655;">
