--- a/bigapplecoin/utility.html
+++ b/bigapplecoin/utility.html
@@ -104,7 +104,7 @@
             position: relative;
             padding-left: 10%;
             color: #ffffff;
-            text-align: -webkit-center;
+            text-align: center;
             margin-left: -70%;
 
         }
