--- a/bigapplecoin/reward.html
+++ b/bigapplecoin/reward.html
@@ -102,7 +102,7 @@
             position: relative;
             padding-left: 10%;
             color: #ffffff;
-            text-align: -webkit-center;
+            text-align: center;
             margin-left: -70%;
 
         }
