--- a/bigapplecoin/bigapple.html
+++ b/bigapplecoin/bigapple.html
@@ -83,7 +83,7 @@
                 color: white;
                 font-stretch: ultra-expanded;
                 font-weight: unset;
-                font-size: -webkit-xxx-large;
+                font-size: 48px;
                 letter-spacing: 2px;
             }
             #rewardh2{
