--- a/bigapplecoin/vendor-reg.html
+++ b/bigapplecoin/vendor-reg.html
@@ -535,7 +535,7 @@
             <div id="footersupport">
                 <h1 style="color:#292655; font-size: 60px;margin-top: -15px;">NYC</h1>
                 <p style="margin-top: -25px;">support@bigapplecoin.com</p>
-                <p>311</p>
+                <p style="margin-top: -10px;">311</p>
             </div>
             <!-- <div id="helpdiv">
                 <h1>Help and Support</h1>
