--- a/bigapplecoin/reward.html
+++ b/bigapplecoin/reward.html
@@ -444,6 +444,10 @@
                 <h1 style="color:#292655; font-size: 60px;margin-top: -15px;">NYC</h1>
                 <p style="margin-top: -25px;">support@bigapplecoin.com</p>
                 <p style="margin-top: -10px;">311</p>
+                <div style="margin-top: 85%;">
+                    <p >This POC is developed by</p>
+                    <img width= "227px"; style="margin-top: -10px;margin-left: -40px;"src="radiant_logo.png" />
+                </div>
             </div>
             <!-- <div id="helpdiv">
                 <h1>Help and Support</h1>
