--- a/bigapplecoin/profile-setting.html
+++ b/bigapplecoin/profile-setting.html
@@ -418,14 +418,14 @@
             <div>
                 <table>
                     <th style="color: #292655;">
-                        <h2>Full Name:</h2><input class="inputbtn" type="text" placeholder="Lorem ipsum" />
+                        <h2>Full Name:</h2><input class="inputbtn" type="text" placeholder="John Smith" />
                     </th>
                     <th style="color: #292655;">
-                        <h2>Display name</h2><input class="inputbtn" type="text" placeholder="Lorem ipsum" />
+                        <h2>Display name</h2><input class="inputbtn" type="text" placeholder="John" />
                     </th>
                     <tr style="color: #292655;">
                         <td>
-                            <h2>User Name</h2><input class="inputbtn" type="text" placeholder="Lorem ipsum" />
+                            <h2>User Name</h2><input class="inputbtn" type="text" placeholder="John Smith" />
                         </td>
                         <td>
                             <h2><u><a href="#">*Change Password</a></u></h2>
@@ -433,12 +433,12 @@
                     </tr>
                     <tr style="color: #292655;">
                         <td>
-                            <h2>E Mail Id:</h2><input class="inputbtn" type="text" placeholder="lorem i@g**il.com" />
+                            <h2>E Mail Id:</h2><input class="inputbtn" type="text" placeholder="johnsmith@g**il.com" />
                         </td>
                     </tr>
                     <tr>
                         <td><button style="background-color:#292655;color:#ffffff;width: 135px;text-align: center;margin-bottom: 25px;"
-                                class='rewardbtn'>Get Started</button></td>
+                                class='rewardbtn'>Save Profile</button></td>
                     </tr>
                 </table>
             </div>
