--- a/bigapplecoin/vendor-reg.html
+++ b/bigapplecoin/vendor-reg.html
@@ -425,39 +425,39 @@
             <div>
                 <table>
                     <th style="color: #292655;">
-                        <h2>Business Name:</h2><input class="inputbtn" type="text" placeholder="Lorem ipsum" />
+                        <h2>Business Name:</h2><input class="inputbtn" type="text" placeholder="John Smith" />
                     </th>
                     <th style="color: #292655;">
-                        <h2>Website:</h2><input class="inputbtn" type="text" placeholder="Lorem ipsum" />
+                        <h2>Website:</h2><input class="inputbtn" type="text" placeholder="www.johnsmith.com" />
                     </th>
                     <tr style="color: #292655;">
                         <td>
                             <h2>Name of person submitting information:</h2><input style="width: 455px;" class="inputbtn"
-                                type="text" placeholder="Lorem ipsum" />
+                                type="text" placeholder="John" />
                         </td>
                     </tr>
                     <tr style="color: #292655;">
                         <td>
-                            <h2>E-mail ID:</h2><input class="inputbtn" type="email" placeholder="Lorem ipsum" />
+                            <h2>E-mail ID:</h2><input class="inputbtn" type="email" placeholder="johnsmith@gm**l.com" />
                         </td>
                         <td>
-                            <h2>Phone Number:</h2><input class="inputbtn" type="number" placeholder="Lorem ipsum" />
-                        </td>
-                    </tr>
-                    <tr style="color: #292655;">
-                        <td>
-                            <h2>Password:</h2><input class="inputbtn" type="password" placeholder="Lorem ipsum" />
-                        </td>
-                        <td>
-                            <h2>Re-type Password:</h2><input class="inputbtn" type="password" placeholder="Lorem ipsum" />
+                            <h2>Phone Number:</h2><input class="inputbtn" type="number" placeholder="123***" />
                         </td>
                     </tr>
                     <tr style="color: #292655;">
                         <td>
-                            <h2>Industry:</h2><input class="inputbtn" type="text" placeholder="Lorem ipsum" />
+                            <h2>Password:</h2><input class="inputbtn" type="password" placeholder="*****" />
                         </td>
                         <td>
-                            <h2>Sub Industry:</h2><input class="inputbtn" type="text" placeholder="Lorem ipsum" />
+                            <h2>Re-type Password:</h2><input class="inputbtn" type="password" placeholder="*****" />
+                        </td>
+                    </tr>
+                    <tr style="color: #292655;">
+                        <td>
+                            <h2>Industry:</h2><input class="inputbtn" type="text" placeholder="John Inc" />
+                        </td>
+                        <td>
+                            <h2>Sub Industry:</h2><input class="inputbtn" type="text" placeholder="Smith LLC" />
                         </td>
                     </tr>
                     <tr>
@@ -474,23 +474,23 @@
             <div style="padding-left:115px;">
                 <table>
                     <th style="color: #292655;">
-                        <h2>Full Name:</h2><input style="margin-right:120px;" class="inputbtn" type="text" placeholder="Lorem ipsum" />
+                        <h2>Full Name:</h2><input style="margin-right:120px;" class="inputbtn" type="text" placeholder="John Smith" />
                     </th>
                     <th style="color: #292655;">
-                        <h2>E Mail:</h2><input style="margin-right: 167px;" class="inputbtn" type="email" placeholder="Lorem ipsum" />
+                        <h2>E Mail:</h2><input style="margin-right: 167px;" class="inputbtn" type="email" placeholder="johnsmith@gm**l.com" />
                     </th>
 
                     <tr style="color: #292655;">
                         <td>
-                            <h2>Username:</h2><input class="inputbtn" type="text" placeholder="Lorem ipsum" />
+                            <h2>Username:</h2><input class="inputbtn" type="text" placeholder="John" />
                         </td>
                         <td>
-                            <h2>Password:</h2><input class="inputbtn" type="password" placeholder="Lorem ipsum" />
+                            <h2>Password:</h2><input class="inputbtn" type="password" placeholder="*****" />
                         </td>
                     </tr>
                     <tr style="color: #292655;">
                         <td>
-                            <h2>Phone Number:</h2><input class="inputbtn" type="number" placeholder="Lorem ipsum" />
+                            <h2>Phone Number:</h2><input class="inputbtn" type="number" placeholder="123***" />
                         </td>
                     </tr>
                     <tr style="color: #292655;">
